# oas_deflation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  archive.sh  exit  intro.md  toolchain_mxe.cmake  uncrustify.cfg  version.cmake
apptainer/: build_container.sh  ubuntu_24-dev.def  ubuntu_24-rel.def
benchmark/: test_all.sh
benchmark/2DUniPressConfined/: mechBC.inp  trsprtBC.inp  trsprtElems.inp  vertices.inp
benchmark/2DUniPressFree/: exporters.inp  materials.inp
benchmark/3BodyRodInTensionNonlinear/: master.inp
benchmark/3DUniPressConfined/: trsprtBC.inp  trsprtElems.inp
benchmark/3DUniPressFree/: trsprtBC.inp
benchmark/DiamondTest/: master.inp  materials.inp  mechBC.inp
benchmark/FiveParticleTestConstraint/: constraint.inp  exporters.inp  govNodes.inp
benchmark/MechanicsNonlinear/: master.inp  vertices.inp
benchmark/PUC_2D/: blocks.inp  functions.inp  materials.inp  periodicX.py
benchmark/RectangleTest/: trsprtBC.inp  trsprtElems.inp  vertices.inp
benchmark/RectangleTestForceLoadConstraint/: functions.inp
benchmark/SpringMechanicsShear/: exporters.inp  materials.inp  nodes.inp  plot_LD_single_spring.py
benchmark/fatigue_test_diagonal/: mechElems.inp  trsprtBC.inp
benchmark/fatigue_test_rectangle/: functions.inp  master.inp  mechBC.inp  nodes.inp
cmake/: FindLAPACKEXT.cmake  FindPardiso.cmake  FindSuperLU.cmake
docker/: Dockerfile_ubuntu18  Dockerfile_ubuntu20  Dockerfile_ubuntu22  Dockerfile_ubuntu24
docs/: Doxyfile  GettingStarted.dox  Inputfiles.dox  Preprocessor.dox  Publications.dox  autobuild_docs.sh  bibliography.bib  clean_gitlab.py  generate_publications.sh  nonlinear-solver-stabilization-handoff.md  nonlinear_solver.md  nonlinear_solver_next_steps_workplan.md  nonlinear_solver_roadmap.md  publications.bib  publications.html  publications_bib.html  tsn65-baseline-replication.md  tsn65-nonlinear-solver-experiment-handoff.md
docs/deflation/: amgcl-failed-rhs-diagnostic-20260509.md  amgcl-near-nullspace-enhancement-20260509.md  amgcl-near-nullspace-fix-20260509.md  benchmark-notes.md  build-and-run.md  dfgmres-global-reorder-comparison-20260507.md  dfgmres-librsb-openmp-comparison-20260507.md  dfgmres-rcm-reorder-comparison-20260507.md  eigen-openmp-kernel-benchmark-20260507.md  firststep-thread-comparison-20260507.md  force-openmp-firststep-j1-j16-timing-20260507.md  force-openmp-investigation-20260507.md  granular-runtime-comparison-20260507.md  hypre-enhancement-followup-20260509.md  hypre-openmp-correction-20260507.md  implementation-report.md  librsb-spmv-scaling-diagnostics-20260507.md  nonlinear-solver-detailed.tex  oas_linear_solver_review_parallel_amended.tex  openmp-bottleneck-review-20260506.md  progress-report-20260505.md  runtime-accounting-20260507.md  tsn65-cheby3-sweeps3-j1-j16-granular-speedup-20260507.md  tsn65-cheby3-sweeps3-twostep-pardiso-comparison-20260507.md
preprocessor/: Transport tesselation.py  utilitiesGeom.py  utilitiesMech.py
results/arc-length-cp4-20260521-cp4/: cp4_arc_length.tsv  metadata.txt  report.md
results/nonlinear-solver-material-tangent-audit-20260519-143422/: material_tangent_audit.tsv  report.md
results/nonlinear-solver-roadmap-cp0-20260520-validate/: report.md  step_summary.tsv  summary.json
results/nonlinear-solver-tangent-attribution-20260519-113815/: report.md
results/tsn65-adaptive-cutback-20260520-cp2/: cp2_adaptive.tsv  metadata.txt  report.md
results/tsn65-arc-length-cp5-20260521/: arc_fd_r1p25e-3_trace.tsv  cp5_arc_length.tsv  metadata.txt  report.md
results/tsn65-arc-length-cp5-radcal-20260521/: arc_fd_r1p35e-2_trace.tsv  cp5_arc_length.tsv  report.md
results/tsn65-cp4-baseline-gate-20260521-0058/: cp1_sweep.tsv  metadata.txt  report.md
results/tsn65-cp5-baseline-gate-20260521/: baseline_step_summary.tsv  cp5_baseline_gate.tsv  metadata.txt  report.md
results/tsn65-cp5b-baseline-gate-20260521/: cp1_sweep.tsv  metadata.txt  report.md
results/tsn65-cp6-state-dump-20260521/: cp1_sweep.tsv  metadata.txt  report.md
results/tsn65-csl-analytic-tangent-20260519-230004/: report.md
results/tsn65-gauge-arc-cp5b-20260521-094117/: cp5b_gauge_arc_length.tsv  metadata.txt  report.md
results/tsn65-globalization-sweep-20260520-cp1/: cp1_sweep.tsv  metadata.txt  report.md
results/tsn65-indirect-control-20260520-cp3/: cp3_indirect_control.tsv  metadata.txt  report.md
results/tsn65-initial-guess-predictor-20260521/: cp1_sweep.tsv  metadata.txt  report.md
results/tsn65-initial-guess-screen-20260521/: report.md  (+2 more)
scripts/: analyze-linear-profile.py  benchmark-amgcl-replay.cpp  benchmark-hypre-replay.cpp  benchmark-librsb-spmv-replay.cpp  compare-runtime-profiles.py  compare_tsn65_states.py  plot-reordered-matrix-spy.py  render-vtu-state.py  run-amgcl-replay-sweep.py  run-dogbone-dfgmres-hypre-sweep.py  run-dogbone-profile.sh  run-hypre-replay-sweep.py  run-librsb-spmv-diagnostics.py  run-oas-profile.sh  run-tsn65-dfgmres-hypre-deflation.py  run-tsn65-hypre-10step-campaign.py  run-tsn65-two-step-campaign.py  run_arc_length_checkpoint.py  run_tsn65_adaptive_cutback.py  run_tsn65_arc_length_cp5.py  run_tsn65_gauge_arc_cp5b.py  run_tsn65_globalization_sweep.py  run_tsn65_indirect_control.py  summarize_oas_run.py  sweep-amgcl.py  update-agent-context.sh
src/: DiscreteModel
src/solver/src/: CMakeLists.txt  adaptivity.h  boundary_condition.cpp  boundary_condition.h  constraint.cpp  constraint.h  cross_section.cpp  cross_section.h  data_exporter.cpp  data_exporter.h  element.cpp  element.h  element_LDPM.cpp  element_LDPM.h  element_beam.cpp  element_beam.h  element_container.cpp  element_container.h  element_continuous.cpp  element_continuous.h  element_discrete.cpp  element_discrete.h  element_fiber.cpp  element_fiber.h  element_ldpm.cpp  element_ldpm.h  element_polyhedral.cpp  element_polyhedral.h  element_superelem.cpp  element_superelem.h  exporter_model.cpp  exporter_model.h  exprtk.hpp  fatigue_material.cpp  fatigue_material.h  function.cpp  function.h  geometry.cpp  geometry.h  globals.cpp  (+95 more)
tests/: settings.py  test_generators.py  test_voronoi.py
(+2047 files in other folders)
